Detalle de antes y despues

--- a/trunk/v2/patrodent/templates/antes_y_despues.html
+++ b/trunk/v2/patrodent/templates/antes_y_despues.html
@@ -17,16 +17,16 @@
 
 {% block content %}
     <div class="wrapper">
-        <div class="alpha prefix_1 grid_23">
-            <div class="border-1">
-                <h3 class="p3">Casos reales de nuestros pacientes</h3>
-                <p class="p7">Aliquam erat volutpat. Praesent vel tempus mi. Etiam tellus mi, ornare imperdiet varius vel, feugiat pulvinar purus! Duis nec nisi augue. Nunc id risus ac ipsum venenatis tincidunt. Proin nulla urna, porttitor nec accumsan eu, laoreet eu lects. Ut consectetur imperdiet malesuada. Nulla auctor, erat vitae lacinia lacinia, ipsum quam consectetur libero, sit amet suscipit enim lacus a justo. Nullam nec risus euism.</p>
-                <div class="wrapper">
-                    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/page4-img1.jpg" alt="" /></figure>
-                    <div class="extra-wrap">
-                        <h3 class="indent-bot2">A Combination of art and <span>Science to Optimally Improve</span> <span>Dental Health</span> </h3>
-                        Praesent vestibulum molestie lacus. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridicu- lus mus. Nulla dui. Fusce feugiat malesuada <br />odio. Morbi nunc odio, ravida.
-                    </div>                                            
+        <div class="alpha prefix_1 grid_22 suffix_8 omega">
+            <h3 class="p3">Casos reales de nuestros pacientes</h3>
+            <p class="p7">Aliquam erat volutpat. Praesent vel tempus mi. Etiam tellus mi, ornare imperdiet varius vel, feugiat pulvinar purus! Duis nec nisi augue. Nunc id risus ac ipsum venenatis tincidunt. Proin nulla urna, porttitor nec accumsan eu, laoreet eu lects. Ut consectetur imperdiet malesuada. Nulla auctor, erat vitae lacinia lacinia, ipsum quam consectetur libero, sit amet suscipit enim lacus a justo. Nullam nec risus euism.</p>
+            <div class="wrapper">
+                <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/page4-img1.jpg" alt="" /></figure>
+                <div class="extra-wrap">
+                    <h3 class="indent-bot2">
+                        A Combination of art and <span>Science to Optimally Improve</span> <span>Dental Health</span>
+                    </h3>
+                    Praesent vestibulum molestie lacus. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridicu- lus mus. Nulla dui. Fusce feugiat malesuada <br />odio. Morbi nunc odio, ravida.
                 </div>
             </div>
         </div>
