--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -23,15 +23,6 @@
 {% endblock %}
 
 {% block before-after %}
-    <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_1.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
-            <span class="afterBeforeText">Después</span>
-        </figure>
-    </div>
-    <div class="wrapper indent-bot2">
-        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_2.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
-            <span class="afterBeforeText">Después</span>
-        </figure>
-    </div>
+    {% include "templates/after_before/inc.odontologia.html" %}
 {% endblock %}
 
