--- a/v2/patrodent/templates/antes_y_despues.html
+++ b/v2/patrodent/templates/antes_y_despues.html
@@ -21,7 +21,7 @@
         <div class="alpha prefix_1 grid_22 suffix_8 omega afterAndBeforePage">
             <h2 class="p3">Casos reales de nuestros pacientes</h2>
             <p>
-                Creemos que la mejor manera de que que creas en nosotros es enseñarte lo que hemos hecho por otros pacientes.
+                Creemos que la mejor manera de que creas en nosotros es enseñandote lo que hemos hecho por otros pacientes.
                 Aqui puedes ver una recopilación de estos casos.
             </p>
             <p> Pasa el ratón por encima de las imágenes para ver el antes</p>
