--- a/v2/patrodent/templates/antes_y_despues.html
+++ b/v2/patrodent/templates/antes_y_despues.html
@@ -38,7 +38,7 @@
             {% include "templates/after_before/inc.protesis.html" %}
             <div class="clear"></div>
             <h3>Estética y blanqueamiento dental</h3>
-            {% include "templates/after_before/inc.odontologia.html" %}
+            {% include "templates/after_before/inc.estetica.html" %}
             <div class="clear"></div>
         </div>
     </div>
