--- a/trunk/v2/patrodent/templates/templates/after_before/inc.periodoncia.html
+++ b/trunk/v2/patrodent/templates/templates/after_before/inc.periodoncia.html
@@ -4,7 +4,7 @@
     </figure>
 </div>
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/no-image.jpg" alt="XXX" title="XXX" class="after" />
+    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/periodoncia_despues2.jpg" alt="XXX" title="XXX" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
