--- a/trunk/v2/patrodent/templates/templates/after_before/inc.estetica.html
+++ b/trunk/v2/patrodent/templates/templates/after_before/inc.estetica.html
@@ -8,3 +8,8 @@
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
+<div class="wrapper indent-bot2 afterAndBefore">
+    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/blanqueamiento1_despues.jpg" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
+        <span class="afterBeforeText">Después</span>
+    </figure>
+</div>
