--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -11,6 +11,7 @@
                 <div class="wrapper indent-bot2">
                     <figure class="img-style img-indent">
                         <iframe width="300" height="200" src="http://www.youtube.com/embed/BBjFInC26Fo" frameborder="0" allowfullscreen></iframe>
+                        <span class="afterBeforeText">Visita nuestras instalaciones interactivamente</span>
                     </figure>
                 </div>
                 <div class="wrapper indent-bot2">
