--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -4,27 +4,27 @@
 
 {% block footergallery %}
     <figure>
-        <a href="http://www.youtube.com/v/8ufZVHkkGPg" rel="shadowbox[quienesSomos]" title="Títulos de Patrocinio Gómez">
+        <a href="http://www.youtube.com/v/8ufZVHkkGPg" rel="shadowbox[quienSoy]" title="Títulos de Patrocinio Gómez">
             <img src="{{ STATIC_URL }}images/titulos.min.jpg" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/patrocinio_despacho.jpg" rel="shadowbox[quienesSomos]" title="Patrocinio en el despacho">
+        <a href="{{ STATIC_URL }}images/patrocinio_despacho.jpg" rel="shadowbox[quienSoy]" title="Patrocinio en el despacho">
             <img src="{{ STATIC_URL }}images/patrocinio_despacho.min.jpg" alt="Patrocinio en el despacho" title="Patrocinio en el despacho" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/patrocinio2.jpg" rel="shadowbox[quienesSomos]" title="Angela Martín">
-            <img src="{{ STATIC_URL }}images/patrocinio2.min.jpg" alt="Angela Martín" title="Angela Martín" />
+        <a href="{{ STATIC_URL }}images/patrocinio2.jpg" rel="shadowbox[quienSoy]" title="Patrocinio en recepción">
+            <img src="{{ STATIC_URL }}images/patrocinio2.min.jpg" alt="Patrocinio en recepción" title="Patrocinio en recepción" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/equipo_trabajando.jpg" rel="shadowbox[quienesSomos]" title="Equipo trabajando">
+        <a href="{{ STATIC_URL }}images/equipo_trabajando.jpg" rel="shadowbox[quienSoy]" title="Equipo trabajando">
             <img src="{{ STATIC_URL }}images/equipo_trabajando.min.jpg" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/patrocinio_trabajando.jpg" rel="shadowbox[quienesSomos]" title="Patrocinio trabajando">
+        <a href="{{ STATIC_URL }}images/patrocinio_trabajando.jpg" rel="shadowbox[quienSoy]" title="Patrocinio trabajando">
             <img src="{{ STATIC_URL }}images/patrocinio_trabajando.min.jpg" alt="Patrocinio trabajando" title="Patrocinio trabajando" />
         </a>
     </figure>
