--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -39,7 +39,13 @@
                         }, 1500);
                     }
                 });
-                Shadowbox.init({continuous: true});
+                Shadowbox.init({continuous: true,
+                                onOpen: function() {
+                                    $("iframe").css("visibility", "hidden");
+                                },
+                                onClose: function() {
+                                    $("iframe").css("visibility", "visible");
+                                }});
             });
           })(jQuery);
     </script>
