--- a/trunk/v2/patrodent/templates/contacto.html
+++ b/trunk/v2/patrodent/templates/contacto.html
@@ -40,6 +40,36 @@
     </div>
 {% endblock %}
 
+
+{% block footergallery %}
+    <figure>
+        <a href="{{ STATIC_URL }}images/recepcion1.jpg" rel="shadowbox[index]" title="Recepción">
+            <img src="{{ STATIC_URL }}images/recepcion1.min.jpg" alt="Recepción" title="Recepción" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/recepcion2.jpg" rel="shadowbox[index]" title="Recepción">
+            <img src="{{ STATIC_URL }}images/recepcion2.min.jpg" alt="Recepción" title="Recepción" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/reloj.jpg" rel="shadowbox[index]" title="Reloj">
+            <img src="{{ STATIC_URL }}images/reloj.min.jpg" alt="Reloj" title="Reloj" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/pasillo.jpg" rel="shadowbox[index]" title="Pasillo de la consulta">
+            <img src="{{ STATIC_URL }}images/pasillo.min.jpg" alt="Pasillo de la consulta" title="Pasillo de la consulta" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/despacho.jpg" rel="shadowbox[index]" title="Despacho">
+            <img src="{{ STATIC_URL }}images/despacho.min.jpg" alt="Despacho" title="Despacho" />
+        </a>
+    </figure>
+{% endblock %}
+
+
 {% block footerjs %}
     {{ block.super }}
     <!-- 123ContactForm.com script begins here -->
