--- a/trunk/v2/patrodent/templates/antes_y_despues.html
+++ b/trunk/v2/patrodent/templates/antes_y_despues.html
@@ -43,3 +43,28 @@
         </div>
     </div>
 {% endblock %}
+
+
+
+{% block footergallery %}
+    <figure>
+        <a href="{{ STATIC_URL }}images/ortodoncia_caso_antes1.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+            <img src="{{ STATIC_URL }}images/ortodoncia_caso_antes1.min.jpg" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/ortodoncia_caso_antes3.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+            <img src="{{ STATIC_URL }}images/ortodoncia_caso_antes3.min.jpg" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/ortodoncia_caso_despues1.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+            <img src="{{ STATIC_URL }}images/ortodoncia_caso_despues1.min.jpg" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
+        </a>
+    </figure>
+    <figure>
+        <a href="{{ STATIC_URL }}images/ortodoncia_caso_despues2.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+            <img src="{{ STATIC_URL }}images/ortodoncia_caso_despues2.min.jpg" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
+        </a>
+    </figure>
+{% endblock %}
