--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -19,8 +19,8 @@
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/equipo_trabajando.jpg" rel="shadowbox[quienSoy]" title="Equipo trabajando">
-            <img src="{{ STATIC_URL }}images/equipo_trabajando.min.jpg" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{{ STATIC_URL }}images/patrocinio_operando2.jpg" rel="shadowbox[quienSoy]" title="Patrocinio operando">
+            <img src="{{ STATIC_URL }}images/patrocinio_operando2.min.jpg" alt="Patrocinio operando" title="Patrocinio operando" />
         </a>
     </figure>
     <figure>
